--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,30 @@
+# Normalize line endings and avoid Git warnings about LF/CRLF on Windows
+#
+# - `text=auto` tells Git to detect text files and normalize them in the repository
+# - Explicit rules below force LF in the repo for common source/documentation files
+#   while allowing Windows scripts to keep CRLF where appropriate
+
+* text=auto
+
+# Force LF in source and docs
+*.dart text eol=lf
+*.yaml text eol=lf
+*.yml text eol=lf
+*.md text eol=lf
+*.txt text eol=lf
+*.json text eol=lf
+*.xml text eol=lf
+*.html text eol=lf
+*.css text eol=lf
+*.js text eol=lf
+*.sh text eol=lf
+
+# Windows script files should keep CRLF
+*.ps1 text eol=crlf
+*.bat text eol=crlf
+
+# Ensure the .gitattributes file itself is consistent
+.gitattributes text eol=lf
 # Normalize line endings across the repository
 # Treat all files as text and let Git handle normalization. On checkout,
 # files will use the client OS native line endings unless overridden.
