--- a/.gitignore
+++ b/.gitignore
@@ -25,59 +25,20 @@ migrate_working_dir/
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
-# Ignore common OS and editor files
-.DS_Store
-*.class
-*.log
-*.pyc
-*.swp
-
-# IntelliJ / Android Studio
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# VS Code
-.vscode/
-
-# Flutter / Dart
-.dart_tool/
-.packages
-pubspec.lock
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
+.pub-cache/
 .pub/
-/.flutter-plugins
-/.flutter-plugins-dependencies
-/.pub-cache
-/.pub
-build/
-/**/doc/api/
+/build/
 
-# Android
-/android/.gradle/
-/android/local.properties
-/android/app/build/
-/android/build/
-/.gradle
-/*.iml
+# Symbolication related
+app.*.symbols
 
-# iOS
-ios/Pods/
-ios/.symlinks/
-ios/Flutter/Flutter.framework
-ios/Flutter/Flutter.podspec
-Runner.xcworkspace/
-Podfile.lock
+# Obfuscation related
+app.*.map.json
 
-# Generated files
-.metadata
-
-# Logs
-.log
-
-# Keep config files (uncomment if you want to track them)
-# .vscode/
-
-# Add other ignores as needed
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
