--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -22,6 +22,12 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    # Disable lint that flags private State types in public APIs. Many
+    # Flutter widgets use a private State class (leading underscore) which
+    # intentionally appears in the public widget API via `createState`.
+    # Disable this rule to avoid noisy analyzer reports across many
+    # widget files while we continue other cleanup.
+    library_private_types_in_public_api: false
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
